# aoc2021

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: aoc.yaml
aoc2021/: __init__.py  utils.py
test/: test_solutions.py
