[metadata]
name = aoc2021
version = 0.1
description = Advent of Code 2021
long_description = file: README.md
url = https://github.com/gante/aoc2021.git
author = gante
author_email = joaofranciscocardosogante@gmail.com

[options]
python_requires= ==3.7.*
packages = find:
include_package_data=True
install_requires =
    numpy
